Set TARG to match the goinstall path is installed directly from github

--- a/src/pkg/net/rtp/Makefile
+++ b/src/pkg/net/rtp/Makefile
@@ -1,12 +1,12 @@
 include $(GOROOT)/src/Make.inc
 
-TARG=net/rtp
+TARG=github.com/wernerd/GoRTP/rtp
 GOFILES= \
-    doc.go \
+	doc.go \
 	packets.go \
 	session.go \
-    stream.go \
-    payload.go \
+	stream.go \
+	payload.go \
 	transport.go \
 	transportUDP.go
 
